@@ -1,6 +1,6 @@
 2011-10-13  Jonathan Yong  <jon_y@users.sourceforge.net>
 
-        * sys/stat.h: Make fstat use 64bit offset for lfs.
+	* sys/stat.h: Make fstat use 64bit offset for lfs.
 
 2011-10-12  Jonathan Yong  <jon_y@users.sourceforge.net>
 
